--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -183,9 +183,7 @@
 }
 
 .product--additional {
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto;
-  row-gap: 10px;
+  display: block;
   padding-top: 0;
 
   @media (min-width: $tablet-width) {
@@ -248,6 +246,13 @@
       text-align: left;
       padding-bottom: 15px;
     }
+  }
+
+  & .product__description {
+    display: flex;
+    justify-content: space-between;
+    grid-column: 2 / 4;
+    grid-row: 1;
   }
 
   & .product__property,
