--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -49,9 +49,9 @@
   position: relative;
   background-color: $basic-grey;
   height: 362px;
-  background-image: url("../img/map-mobile.png");
-  background-repeat: no-repeat;
-  background-position: center center;
+  //background-image: url("../img/map-mobile.png");
+  //background-repeat: no-repeat;
+  //background-position: center center;
 
   @media (min-width: $tablet-width) {
     height: 400px;
@@ -62,6 +62,7 @@
   width: 100%;
   display: block;
   height: 362px;
+  border: 0;
 
   @media (min-width: $tablet-width) {
     height: 400px;
