--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -28,10 +28,12 @@
 .location__title {
   font-size: 14px;
   line-height: 20px;
+  letter-spacing: 1px;
   font-weight: 400;
   color: $black;
   text-transform: uppercase;
-  max-width: 145px;
+  max-width: 140px;
+  margin-top: 10px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -43,6 +45,7 @@
   font-size: 14px;
   line-height: 20px;
   max-width: 159px;
+  margin-top: 11px;
 }
 
 .location__map {
