--- a/source/sass/blocks/matching.scss
+++ b/source/sass/blocks/matching.scss
@@ -1,13 +1,16 @@
 .matching {
   @include center-wrapper;
+  padding-bottom: 31px;
 }
 
 .matching__title {
   font-size: 36px;
   font-weight: 400;
   color: $black;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  margin-top: 25px;
+  margin-bottom: 0;
+  //padding-top: 25px;
+  //padding-bottom: 25px;
 
   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1px) {
     padding-left: 30px;
@@ -16,14 +19,17 @@
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
-    padding-top: 50px;
-    padding-bottom: 44px;
+    padding-top: 10px;
+    padding-bottom: 0;
   }
 }
 
 .matching__text {
   text-transform: uppercase;
   color: $black;
+  margin-top: 40px;
+  width: 97%;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1px) {
     padding-left: 30px;
@@ -39,17 +45,20 @@
   @media (min-width: $desktop-width) {
     width: 32%;
     margin-bottom: 66px;
+    margin-top: 46px;
   }
 }
 
 .matching__note {
   font-family: $text-font;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 21px;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     position: relative;
+    font-size: 16px;
     bottom: 57px;
     left: 129px;
   }
