--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,8 +3,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
-  padding: 17px 20px;
+  //gap: 24px;
+  padding: 23px 20px 15px;
   border-bottom: 1px solid $border-grey;
   border-top: 1px solid $border-grey;
 
@@ -16,6 +16,8 @@
 
 .social__item {
   vertical-align: baseline;
+  padding-left: 15px;
+  padding-right: 20px;
 }
 
 .social__icon {
@@ -40,6 +42,7 @@
   &--fb {
     width: 22px;
     height: 22px;
+    padding-bottom: 20px;
 
     @media (min-width: $tablet-width) {
       width: 24px;
