fix pixel-perfect of form-mobile

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,6 +1,6 @@
 .copyright {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 7px;
+  //padding-bottom: 20px;
 }
 
 .copyright__link {
