--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,6 +1,6 @@
 .form {
   width: 100%;
-  padding-top: 20px;
+  padding-top: 18px;
 
   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1px) {
     padding-left: 30px;
@@ -30,7 +30,7 @@
   display: grid;
   grid-template-columns: max-content 1fr;
   column-gap: 6px;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
 
   @media (min-width: $desktop-width) {
     column-gap: 10px;
@@ -57,7 +57,7 @@
   background-color: $white;
   color: $special-dark-grey;
   text-transform: uppercase;
-  padding: 10px 14px;
+  padding: 10px 15px;
   border: 1px solid $basic-grey-form;
   margin-left: 10px;
   margin-bottom: 10px;
@@ -159,8 +159,8 @@
 .form__input-radio + .form__label::before {
   content: "";
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  width: 28px;
+  height: 28px;
   border-radius: 50%;
   border: 1px solid $special-grey;
   margin-right: 20px;
@@ -182,7 +182,7 @@
   border-radius: 50%;
   background-color: $basic-green;
   position: absolute;
-  top: 2px;
+  top: 3px;
   left: -38px;
 
   @media (min-width: $tablet-width) {
@@ -262,7 +262,7 @@
   &--contacts {
     @media (max-width: $mobile-width-only) {
       display: block;
-      width: 79%;
+      width: 65%;
     }
   }
 }
@@ -271,11 +271,12 @@
   @media (max-width: $mobile-width-only) {
     display: block;
     width: 100%;
+    margin-top: -6px;
   }
 }
 
 .form__contacts-wrapper {
-  margin-top: -14px;
+  margin-top: -34px;
   margin-bottom: 0;
 
   @media (min-width: $desktop-width) {
@@ -328,22 +329,23 @@
 }
 
 .form__comment {
-  margin-top: 7px;
+  margin-top: 5px;
   margin-bottom: 0;
 }
 
 .form__textarea {
   width: 100%;
+  box-sizing: border-box;
   height: 150px;
   font-family: $title-font;
   font-size: 16px;
   background-color: $white;
   color: $special-dark-grey;
   text-transform: uppercase;
-  padding: 10px 13px;
+  padding: 5px 13px;
   border: 1px solid $basic-grey-form;
   resize: none;
-  margin-top: 39px;
+  margin-top: 35px;
 
   &::placeholder {
     font-family: $title-font;
@@ -368,8 +370,8 @@
   flex-wrap: wrap;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 10px;
-  margin-bottom: 18px;
+  margin-top: 7px;
+  margin-bottom: 20px;
 
   & .form__label {
     color: $black;
@@ -383,7 +385,7 @@
 
 .form__additional-wrapper {
   display: grid;
-  margin-top: 29px;
+  margin-top: 24px;
   margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
@@ -404,12 +406,12 @@
 .form__input-checkbox + .form__label::before {
   content: "";
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  width: 28px;
+  height: 28px;
   border: 1px solid $special-grey;
   margin-right: 20px;
   position: absolute;
-  top: 5px;
+  top: 7px;
   left: -45px;
 
   @media (min-width: $tablet-width) {
@@ -424,8 +426,8 @@
   width: 18px;
   height: 14px;
   position: absolute;
-  top: 12px;
-  left: -41px;
+  top: 13px;
+  left: -39px;
 
   @media (min-width: $tablet-width) {
     top: 8px;
