--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -14,6 +14,12 @@
   align-items: center;
   min-height: 114px;
 
+  @media (min-width: $tablet-width) {
+    min-height: 200px;
+    padding-left: 70px;
+    padding-right: 72px;
+  }
+
   @media (min-width: $desktop-width) {
     position: absolute;
     z-index: 2;
@@ -36,7 +42,9 @@
   margin-top: 14px;
 
   @media (min-width: $tablet-width) {
-    font-size: 16px;
+    font-size: 20px;
+    line-height: 26px;
+    margin-top: 22px;
   }
 }
 
@@ -46,6 +54,13 @@
   line-height: 20px;
   max-width: 159px;
   margin-top: 16px;
+
+  @media (min-width: $tablet-width) {
+    text-align: right;
+    font-size: 20px;
+    line-height: 26px;
+    margin-top: 22px;
+  }
 }
 
 .location__map {
