--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -43,6 +43,7 @@
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
+    letter-spacing: 0;
     line-height: 26px;
     margin-top: 22px;
   }
@@ -57,9 +58,16 @@
 
   @media (min-width: $tablet-width) {
     text-align: right;
-    font-size: 20px;
-    line-height: 26px;
-    margin-top: 22px;
+    font-size: 16px;
+    line-height: 20px;
+    margin-top: 21px;
+  }
+}
+
+.location__span {
+  @media (min-width: $tablet-width) {
+    display: block;
+    margin-top: 20px;
   }
 }
 
