--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -11,6 +11,7 @@
   @media (min-width: $tablet-width) {
     border-bottom: none;
     border-top: none;
+    padding: 18px 22px 13px 38px;
   }
 }
 
@@ -18,6 +19,11 @@
   vertical-align: baseline;
   padding-left: 15px;
   padding-right: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 10px;
+    padding-left: 16px;
+  }
 }
 
 .social__icon {
