some fixes of pixel-perfect form tablet

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -3,8 +3,9 @@
   //padding-bottom: 20px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 12px;
-    padding-right: 3px;
+    padding-right: 1px;
+    align-self: baseline;
+    padding-top: 39px;
   }
 }
 
