--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -104,7 +104,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  padding-top: 18px;
+  padding-top: 14px;
   padding-bottom: 4px;
   position: relative;
 
@@ -144,7 +144,7 @@
     display: block;
     margin-left: calc((100vw - 280px) / -2);
     position: absolute;
-    top: -11px;
+    top: -15px;
   }
 }
 
@@ -157,7 +157,7 @@
     display: block;
     margin-left: calc((100vw - 280px) / -2);
     position: absolute;
-    bottom: 0;
+    bottom: 4px;
   }
 }
 
@@ -212,7 +212,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-top: 24px;
+  margin-top: 19px;
   margin-bottom: 0;
   //align-items: flex-start;
 
@@ -286,7 +286,7 @@
 }
 
 .form__contacts-wrapper {
-  margin-top: -34px;
+  margin-top: -36px;
   margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
@@ -304,7 +304,7 @@
 
     @media (min-width: $tablet-width) {
       column-gap: 11px;
-      margin-bottom: 20px;
+      margin-bottom: 14px;
     }
 
     @media (min-width: $desktop-width) {
@@ -373,7 +373,7 @@
   margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
-    margin-top: 39px;
+    margin-top: 37px;
   }
 }
 
@@ -392,9 +392,9 @@
   margin-top: 35px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 71px;
+    margin-top: 70px;
     height: 174px;
-    padding: 12px 18px;
+    padding: 10px 18px;
   }
 
   &::placeholder {
@@ -424,7 +424,7 @@
   flex-wrap: wrap;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 9px;
+  margin-top: 6px;
   margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
@@ -522,6 +522,7 @@
 
 .form .button {
   letter-spacing: 1px;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     display: inline-block;
