--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -38,7 +38,7 @@
   font-weight: 400;
   color: $black;
   text-transform: uppercase;
-  max-width: 140px;
+  width: 140px;
   margin-top: 14px;
 
   @media (min-width: $tablet-width) {
@@ -53,7 +53,7 @@
   font-family: $text-font;
   font-size: 14px;
   line-height: 20px;
-  max-width: 159px;
+  width: 159px;
   margin-top: 16px;
 
   @media (min-width: $tablet-width) {
