make pixel-perfect of form desktop

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -7,6 +7,10 @@
     align-self: baseline;
     padding-top: 39px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 44px;
+  }
 }
 
 .copyright__link {
