--- a/source/sass/blocks/matching.scss
+++ b/source/sass/blocks/matching.scss
@@ -1,6 +1,10 @@
 .matching {
   @include center-wrapper;
   padding-bottom: 31px;
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 41px;
+  }
 }
 
 .matching__title {
@@ -20,6 +24,10 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     margin-top: 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 60px;
   }
 }
 
@@ -44,7 +52,7 @@
 
   @media (min-width: $desktop-width) {
     width: 32%;
-    margin-bottom: 66px;
+    margin-bottom: 46px;
     margin-top: 46px;
   }
 }
@@ -61,5 +69,10 @@
     font-size: 16px;
     bottom: 57px;
     left: 120px;
+  }
+
+  @media (min-width: $desktop-width) {
+    bottom: 55px;
+    left: 133px;
   }
 }
