make some fixes of pixel-perfect form desktop

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -557,7 +557,8 @@
 
 .form .button {
   letter-spacing: 1px;
-  width: 100%;
+  display: block;
+  //width: 100%;
 
   @media (min-width: $tablet-width) {
     display: inline-block;
