--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -24,11 +24,11 @@
     position: absolute;
     z-index: 2;
     top: 25%;
-    left: 7%;
+    left: 210px;
     //width: 520px;
     background-color: $white;
-    padding: 41px 84px 45px 80px;
-    min-width: 573px;
+    padding: 41px 87px 45px 76px;
+    width: 570px;
   }
 }
 
