begin make pixel-perfect of catalog mobile

--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -59,6 +59,7 @@
 
   @media (min-width: $tablet-width) {
     text-align: right;
+    width: 166px;
     font-size: 16px;
     line-height: 20px;
     margin-top: 22px;
