--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,8 +5,8 @@
 .catalog__title {
   font-size: 36px;
   font-weight: 400;
-  padding-top: 27px;
-  padding-bottom: 40px;
+  margin-top: 21px;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
@@ -18,6 +18,7 @@
 
 .catalog__list {
   display: grid;
+  margin-top: 55px;
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 324px 324px;
