--- a/source/sass/blocks/more.scss
+++ b/source/sass/blocks/more.scss
@@ -35,7 +35,7 @@
     display: block;
     margin-left: calc((100vw - 768px) / -2);
     position: absolute;
-    top: 250px;
+    top: 186px;
   }
 }
 
@@ -44,7 +44,7 @@
   font-weight: 400;
   font-size: 16px;
   text-transform: uppercase;
-  padding-top: 45px;
+  padding-top: 23px;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 10px;
@@ -57,7 +57,7 @@
     height: 30px;
     content: url("../img/plus-icon-mobile.svg");
     position: absolute;
-    top: 30px;
+    top: 5px;
     left: 45%;
 
     @media (min-width: $tablet-width) {
@@ -73,9 +73,10 @@
 .more__subtitle {
   font-family: $text-font;
   font-size: 12px;
-  padding-top: 10px;
-  padding-bottom: 20px;
   color: $special-dark-grey;
+  margin-top: 6px;
+  margin-left: -5px;
+  margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     padding-top: 0;
