--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -5,7 +5,7 @@
   //row-gap: 15px;
   //padding: 12px 0 29px;
   position: relative;
-  margin-bottom: 42px;
+  margin-bottom: 45px;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -29,7 +29,7 @@
     display: block;
     margin-left: calc((100vw - 280px) / -2);
     position: absolute;
-    top: -11px;
+    top: -20px;
   }
 }
 
@@ -57,7 +57,7 @@
 
   &--big {
     width: 84px;
-    top: 22px;
+    top: 11px;
     left: 28px;
 
     @media (min-width: $tablet-width) {
@@ -73,9 +73,10 @@
     }
   }
 
-  &--3 {
-    top: 35px;
-    left: 25px;
+  &--3,
+  &--5 {
+    top: 26px;
+    left: 36px;
 
     @media (min-width: $tablet-width) {
       width: 163px;
@@ -90,6 +91,8 @@
 
   &--7 {
     width: 72px;
+    top: 23px;
+    left: 35px;
 
     @media (min-width: $tablet-width) {
       width: 163px;
@@ -217,14 +220,9 @@
 
   &::before {
     @media (max-width: $mobile-width-only) {
-      //content: "";
       width: 100%;
-      //height: 2px;
-      //background-color: $border-grey-catalog;
-      //display: block;
       margin-left: 0;
-      //position: absolute;
-      //top: -11px;
+      top: -14px;
     }
   }
 
@@ -244,6 +242,7 @@
     grid-row: 1;
     grid-column: 1 / -1;
     width: 100%;
+    margin-top: 9px;
 
     @media (min-width: $tablet-width) {
       grid-column: 1;
