--- a/source/sass/blocks/more.scss
+++ b/source/sass/blocks/more.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding: 20px 0;
+  //padding: 20px 0;
   text-align: center;
   position: relative;
 
@@ -22,7 +22,7 @@
     display: block;
     margin-left: calc((100vw - 768px) / -2);
     position: absolute;
-    top: 10px;
+    top: -23px;
   }
 }
 
@@ -44,7 +44,8 @@
   font-weight: 400;
   font-size: 16px;
   text-transform: uppercase;
-  padding-top: 23px;
+  margin-top: 57px;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 10px;
@@ -74,9 +75,9 @@
   font-family: $text-font;
   font-size: 12px;
   color: $special-dark-grey;
-  margin-top: 6px;
-  margin-left: -5px;
-  margin-bottom: 20px;
+  margin-top: 8px;
+  margin-left: -3px;
+  margin-bottom: 19px;
 
   @media (min-width: $tablet-width) {
     padding-top: 0;
