--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -29,7 +29,7 @@
     display: block;
     margin-left: calc((100vw - 280px) / -2);
     position: absolute;
-    top: -20px;
+    top: -22px;
   }
 }
 
@@ -179,7 +179,7 @@
   grid-row: -1;
   grid-column: 1 / -1;
   margin-left: 0;
-  margin-right: 3px;
+  //margin-right: 3px;
 
 
   @media (min-width: $tablet-width) {
@@ -193,6 +193,7 @@
 .product--additional {
   display: block;
   padding-top: 0;
+  margin-bottom: 29px;
 
   @media (min-width: $tablet-width) {
     display: grid;
@@ -243,6 +244,8 @@
     grid-column: 1 / -1;
     width: 100%;
     margin-top: 9px;
+    margin-left: 2px;
+    margin-bottom: 0;
 
     @media (min-width: $tablet-width) {
       grid-column: 1;
@@ -257,6 +260,11 @@
     justify-content: space-between;
     grid-column: 2 / 4;
     grid-row: 1;
+    margin-top: 10px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    margin-right: -2px;
+    margin-bottom: 14px;
   }
 
   & .product__property,
