--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -20,8 +20,9 @@
 
   &--footer {
     width: auto;
-    padding-top: 37px;
+    padding-top: 42px;
     padding-bottom: 28px;
+    padding-left: 3px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
