--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   justify-content: center;
   //gap: 24px;
-  padding: 23px 20px 13px;
+  padding: 23px 20px 14px;
   border-bottom: 1px solid $border-grey;
   border-top: 1px solid $border-grey;
 
@@ -15,15 +15,14 @@
   }
 
   @media (min-width: $desktop-width) {
-
     padding: 12px 22px 13px 46px;
   }
 }
 
 .social__item {
   vertical-align: baseline;
-  padding-left: 15px;
-  padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 16px;
 
   @media (min-width: $tablet-width) {
     padding-right: 10px;
@@ -53,6 +52,8 @@
   &--fb {
     width: 22px;
     height: 22px;
+    padding-right: 8px;
+    padding-bottom: 4px;
 
     @media (min-width: $tablet-width) {
       width: 25px;
