--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    min-height: 430px;
+    min-height: 400px;
     background-color: $basic-grey;
     padding-left: 30px;
     padding-right: 30px;
@@ -123,7 +123,7 @@
     line-height: 24px;
     width: 158px;
     text-align: center;
-    padding-top: 131px;
+    margin-top: 146px;
     padding-bottom: 0;
   }
 }
