make pixel-perfect of catalog tablet

--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -18,8 +18,7 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    padding-top: 46px;
-    padding-bottom: 70px;
+    margin-top: 20px;
     padding-left: 38px;
   }
 
@@ -39,7 +38,7 @@
 
     @media (min-width: $tablet-width) {
       left: calc((708px - 100vw) / 2);
-      top: 70px;
+      top: 21px;
     }
 
     @media (min-width: $desktop-width) {
@@ -69,5 +68,6 @@
   @media (min-width: $desktop-width) {
     grid-column: 1;
     grid-row: 2;
+    margin-top: 82px;
   }
 }
