--- a/source/sass/blocks/more.scss
+++ b/source/sass/blocks/more.scss
@@ -9,7 +9,9 @@
 
   @media (min-width: $tablet-width) {
     padding: 30px;
-    border: 2px solid $basic-grey;
+    border: 1px solid $basic-grey;
+    height: 430px;
+    box-sizing: border-box;
   }
 }
 
@@ -44,12 +46,15 @@
   font-weight: 400;
   font-size: 16px;
   text-transform: uppercase;
-  margin-top: 57px;
-  margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 24px;
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 10px;
-    max-width: 107px;
+    font-size: 20px;
+    line-height: 22px;
+    margin-top: 0;
+    margin-bottom: 24px;
+    max-width: 170px;
   }
 
   &::before {
@@ -65,8 +70,8 @@
       width: 60px;
       height: 60px;
       content: url("../img/plus-icon.svg");
-      top: 60px;
-      left: 40%;
+      top: 51px;
+      left: 41%;
     }
   }
 }
@@ -80,8 +85,11 @@
   margin-bottom: 19px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 0;
-    padding-bottom: 50px;
-    max-width: 125px;
+    font-size: 16px;
+    line-height: 18px;
+    max-width: 170px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-bottom: 84px;
   }
 }
