--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -12,11 +12,12 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    min-height: 400px;
+    min-height: 430px;
+    box-sizing: border-box;
     background-color: $basic-grey;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 32px;
+    padding-left: 38px;
+    padding-right: 35px;
+    padding-bottom: 30px;
   }
 }
 
@@ -80,7 +81,7 @@
 
     @media (min-width: $tablet-width) {
       width: 163px;
-      top: -60px;
+      top: -45px;
       left: 83px;
     }
 
@@ -96,7 +97,8 @@
 
     @media (min-width: $tablet-width) {
       width: 163px;
-      top: -82px;
+      top: -67px;
+      left: 82px;
     }
   }
 }
@@ -123,7 +125,8 @@
     line-height: 24px;
     width: 158px;
     text-align: center;
-    margin-top: 146px;
+    margin-top: 145px;
+    margin-bottom: 0;
     padding-bottom: 0;
   }
 }
@@ -142,6 +145,7 @@
     //min-width: 252px;
     width: 100%;
     grid-template-rows: repeat(3, 32px);
+    margin-top: 0;
   }
 }
 
@@ -156,6 +160,7 @@
     font-size: 16px;
     border-bottom: 1px solid $special-grey;
     padding: 10px 10px;
+    padding-left: 0;
   }
 }
 
@@ -170,7 +175,7 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     border-bottom: 1px solid $special-grey;
-    padding: 10px 5px;
+    padding: 10px 0;
     margin-left: 0;
   }
 }
@@ -197,15 +202,16 @@
 
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: 1fr 152px 65px;
+    grid-template-columns: 1fr 175px 65px;
     column-gap: 25px;
     grid-template-rows: 50px;
     row-gap: 10px;
     background-color: $white;
     min-height: 110px;
     border: 1px solid $special-grey;
-    padding: 10px 30px 25px 40px;
+    padding: 14px 38px 25px 34px;
     margin-top: -2px;
+    margin-bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -257,22 +263,41 @@
 
   & .product__description {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     grid-column: 2 / 4;
     grid-row: 1;
     margin-top: 10px;
-    font-size: 16px;
-    letter-spacing: 1px;
+    font-size: 14px;
+    line-height: 14px;
+    //letter-spacing: 1px;
     margin-right: -2px;
     margin-bottom: 14px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 16px;
+      line-height: 20px;
+    }
   }
 
-  & .product__property,
+  & .product__property {
+    @media (min-width: $tablet-width) {
+      text-align: right;
+      border-bottom: none;
+      //padding: 30px 5px;
+    }
+
+    @media (min-width: $desktop-width) {
+      text-align: left;
+    }
+  }
+
   & .product__value {
     @media (min-width: $tablet-width) {
       text-align: right;
       border-bottom: none;
-      padding: 30px 5px;
+      //padding: 30px 5px;
+      margin-left: 49px;
+      margin-right: -5px;
     }
 
     @media (min-width: $desktop-width) {
