--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -4,7 +4,7 @@
 
   @media (min-width: $desktop-width) {
     column-gap: 60px;
-    margin-bottom: 40px;
+    margin-bottom: 84px;
   }
 }
 
@@ -18,13 +18,14 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    margin-top: 20px;
+    margin-top: 26px;
     padding-left: 38px;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 1 / -1;
     grid-row: 1;
+    margin-top: 32px;
   }
 
   &::after {
@@ -60,6 +61,12 @@
     padding-left: 30px;
     margin-left: -30px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 40px;
+    padding-left: 40px;
+    margin-left: -77px;
+  }
 }
 
 .additional__list {
@@ -69,5 +76,9 @@
     grid-column: 1;
     grid-row: 2;
     margin-top: 82px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: -34px;
   }
 }
