--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -11,7 +11,11 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
-    margin-top: 62px;
+    margin-top: 61px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 74px;
   }
 }
 
@@ -21,7 +25,7 @@
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 324px 324px;
-    gap: 96px 60px;
+    gap: 95px 60px;
     margin-top: 162px;
     margin-bottom: 0;
   }
