--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -35,7 +35,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 2;
     grid-row: 2;
-    margin-top: 0;
+    margin-top: 80px;
     width: 245px;
   }
 }
