--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -29,6 +29,7 @@
 
     @media (min-width: $tablet-width) {
       text-align: left;
+      padding-left: 0;
       margin-left: 0;
       margin-right: 0;
       padding-top: 28px;
