--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,5 +1,5 @@
 .example {
-  margin-top: 20px;
+  //margin-top: 20px;
 
   @media (min-width: $desktop-width) {
     background-color: $basic-grey-2;
@@ -55,8 +55,9 @@
 .example__title {
   font-size: 36px;
   font-weight: 400;
-  padding-top: 26px;
-  padding-bottom: 50px;
+  padding-top: 23px;
+  margin-top: 40px;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
@@ -71,6 +72,7 @@
 .example__text {
   font-family: $text-font;
   line-height: 1.286;
+  margin-top: 29px;
   margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
@@ -87,11 +89,13 @@
 }
 
 .example__statistic {
-  padding-top: 20px;
+  //padding-top: 20px;
   display: flex;
   flex-direction: column;
   //justify-content: space-between;
   flex-wrap: wrap;
+  margin-top: 10px;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
@@ -102,6 +106,7 @@
 .example__list {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     width: 52%;
@@ -137,7 +142,7 @@
   }
 
   &--kg {
-    padding: 15px 42px 18px 42px;
+    padding: 15px 42px 16px 42px;
 
     @media (min-width: $tablet-width) {
       padding: 16px 58px 18px 54px;
@@ -145,7 +150,7 @@
   }
 
   &--days {
-    padding: 15px 20px 18px 21px;
+    padding: 15px 20px 16px 21px;
 
     @media (min-width: $tablet-width) {
       padding: 15px 31px 19px 30px;
@@ -165,8 +170,8 @@
   background-color: $basic-grey-2;
   padding-left: 5px;
   padding-right: 5px;
-  margin-left: 0;
-  margin-top: -8px;
+  margin-left: -1px;
+  margin-top: -9px;
   //transform: translateX(50%);
 
   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1px) {
@@ -189,14 +194,15 @@
 }
 
 .example__cost {
-  padding-top: 15px;
-  padding-bottom: 40px;
+  //padding-top: 15px;
+  //padding-bottom: 40px;
   font-family: $title-font;
   color: $black;
   text-transform: uppercase;
   text-align: center;
-  margin: 0;
   flex-grow: 1;
+  margin-top: 20px;
+  margin-bottom: 43px;
 
   @media (min-width: $tablet-width) {
     text-align: right;
