--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,12 +1,13 @@
 .intro {
   background-color: rgba($basic-green, 0.85);
-  min-height: 302px;
+  //min-height: 302px;
   color: $white;
   text-align: center;
   background-image: url("../img/index-bg-mobile.jpg"),
-    linear-gradient(to bottom, rgba($basic-green, 0.85) 62%, $white 62% 100%);
+    linear-gradient(to bottom, rgba($basic-green, 0.85) 63%, $white 63% 100%);
   background-repeat: no-repeat;
   background-position: center top;
+  margin-bottom: 0;
 
   @media (min-resolution: 2dppx) {
     background-color: $white;
@@ -44,10 +45,13 @@
 
 .intro__title {
   font-size: 36px;
+  line-height: 36px;
   font-weight: 400;
-  padding-top: 22px;
-  padding-bottom: 10px;
+  padding-top: 29px;
+  //padding-bottom: 10px;
+  margin-bottom: 0;
   margin-top: 0;
+  box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
@@ -63,7 +67,8 @@
 .intro__text {
   font-size: 14px;
   text-transform: uppercase;
-  margin-bottom: 277px;
+  margin-top: 23px;
+  margin-bottom: 300px;
   position: relative;
 
   @media (min-width: $tablet-width) {
@@ -84,7 +89,7 @@
     width: 280px;
     background-image: url("../img/index-can-mobile.png");
     position: absolute;
-    top: 25px;
+    top: 45px;
     left: 0;
 
     @media (min-resolution: 2dppx) {
@@ -110,6 +115,9 @@
 }
 
 .intro .button {
+  font-size: 14px;
+  line-height: 18px;
+
   @media (min-width: $tablet-width) {
     width: 40%;
   }
