--- a/source/sass/blocks/more.scss
+++ b/source/sass/blocks/more.scss
@@ -46,8 +46,8 @@
   font-weight: 400;
   font-size: 16px;
   text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 24px;
+  margin-top: 60px;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
