--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -1,10 +1,12 @@
 .range {
-  padding-bottom: 20px;
-  margin-top: 33px;
+  padding-bottom: 35px;
+  margin-top: 32px;
+  min-width: 228px;
   display: flex;
   //gap: 15px;
-  justify-content: space-around;
+  //justify-content: space-around;
   align-items: baseline;
+  margin-left: 42px;
 }
 
 .range__text {
@@ -13,8 +15,8 @@
   color: $black;
   text-transform: uppercase;
   text-align: center;
-  margin-left: 5px;
   cursor: pointer;
+  margin-bottom: 0;
 
   @media (min-width: $tablet-width) {
     border-bottom: 1px dotted rgba($black, 0.4);
@@ -33,12 +35,11 @@
 .range__scale {
   border: 1px solid $special-grey;
   border-radius: 15px;
-  width: 30%;
+  width: 84px;
   height: 14px;
   background-color: $white;
-  //position: relative;
-  //top: 3px;
-  //left: 3px;
+  margin-left: 18px;
+  margin-right: 16px;
 
   @media (min-width: $tablet-width) {
     width: 428px;
